2023-03-30.container-and-Kubernetes-security-policy-design/04.best-practices-for-securing-a-Kubernetes-environment/01.container-to-localhost.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-containers-access-to-localhost 
spec:
  order: 1001
  selector: has(kubernetes.io/os)
  ingress:
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
  egress:
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
