2023-03-30.container-and-Kubernetes-security-policy-design/04.best-practices-for-securing-a-Kubernetes-environment/04.calico-kube-controller-to-api.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-kube-controllers-to-apiserver
  namespace: calico-system
spec:
  order: 1001
  selector: 'k8s-app == "calico-kube-controllers"'
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: k8s-app == "calico-apiserver"
