2023-03-30.container-and-Kubernetes-security-policy-design/04.best-practices-for-securing-a-Kubernetes-environment/05.calico-components-to-apiserver.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: calico-components-to-apiserver
spec:
  order: 1001
  selector: has(kubernetes.io/os)
  egress:
  - action: Allow
    protocol: TCP
    destination:
      selector: 'k8s-app == "calico-apiserver"'
      ports:
      - 5443
